--- a/stable/index.html
+++ b/stable/index.html
@@ -13,6 +13,15 @@
   <script src="./monaco-editor/min/vs/loader.js"></script>
   <script src="./handle-monaco.js"></script>
   <title>PyTry</title>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-0YCEGH6ERT"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-0YCEGH6ERT');
+  </script>
 </head>
 
 <body>
