--- a/stable/index.html
+++ b/stable/index.html
@@ -12,7 +12,7 @@
   <script src="./handle-pyodide.js"></script>
   <script src="./monaco-editor/min/vs/loader.js"></script>
   <script src="./handle-monaco.js"></script>
-  <title>PyTry</title>
+  <title>PyTry (安定版)</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-0YCEGH6ERT"></script>
